--- a/package.json
+++ b/package.json
@@ -9,16 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "@emailjs/browser": "4.4.1",
+    "@emotion/react": "11.13.0",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "5.16.6",
+    "@mui/material": "5.16.6",
+    "dotenv": "16.4.5",
+    "framer-motion": "11.3.21",
+    "i18nextnext": "1.1.0-rc1",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-i18next": "11.18.6",
+    "react-icons": "5.2.1",
+    "react-magic-motion": "1.1.2",
+    "react-scroll": "1.9.0",
+    "react-simple-typewriter": "5.0.1",
+    "react-slick": "0.30.2",
+    "react-toastify": "10.0.5",
+    "react-ui-scrollspy": "2.3.0",
+    "slick-carousel": "1.8.1",
+    "toastify": "2.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "@types/node": "20",
+    "@types/react": "18",
+    "@types/react-dom": "18",
+    "eslint": "8",
+    "eslint-config-next": "14.2.5",
+    "typescript": "5"
   }
 }
