--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-i18next": "11.18.6",
+    "react-i18next": "15.0.0",
     "react-icons": "5.2.1",
     "react-magic-motion": "1.1.2",
-    "react-scroll": "1.9.0",
+    "react-scroll": "^1.9.0",
     "react-simple-typewriter": "5.0.1",
     "react-slick": "0.30.2",
     "react-toastify": "10.0.5",
@@ -35,6 +35,7 @@
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "8",
     "eslint-config-next": "14.2.5",
     "typescript": "5"
