--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "5.0.1",
     "react-slick": "0.30.2",
+    "react-spinners": "^0.14.1",
     "react-toastify": "10.0.5",
     "react-ui-scrollspy": "2.3.0",
     "slick-carousel": "1.8.1",
