--- a/package.json
+++ b/package.json
@@ -16,29 +16,28 @@
     "@mui/material": "5.16.6",
     "dotenv": "16.4.5",
     "framer-motion": "11.3.21",
-    "i18nextnext": "1.1.0-rc1",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "15.0.0",
     "react-icons": "5.2.1",
     "react-magic-motion": "1.1.2",
-    "react-scroll": "^1.9.0",
+    "react-scroll": "1.9.0",
     "react-simple-typewriter": "5.0.1",
     "react-slick": "0.30.2",
-    "react-spinners": "^0.14.1",
+    "react-spinners": "0.14.1",
     "react-toastify": "10.0.5",
     "react-ui-scrollspy": "2.3.0",
     "slick-carousel": "1.8.1",
     "toastify": "2.0.1"
   },
   "devDependencies": {
-    "@types/node": "20",
-    "@types/react": "18",
-    "@types/react-dom": "18",
-    "@types/react-scroll": "^1.8.10",
-    "eslint": "8",
+    "@types/node": "22.1.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/react-scroll": "1.8.10",
+    "eslint": "9.8.0",
     "eslint-config-next": "14.2.5",
-    "typescript": "5"
+    "typescript": "5.5.4"
   }
 }
